add date on diary